<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CadastrarItemActivity"
    tools:showIn="@layout/activity_cadastrar_item">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/cadastrar_item_descricao"
            style="@style/AppTheme.input"
            android:gravity="top"
            android:hint="@string/descricao" />

        <EditText
            android:id="@+id/cadastrar_item_local_retirada"
            style="@style/AppTheme.input"
            android:layout_below="@id/cadastrar_item_descricao"
            android:hint="@string/local_retirada" />

        <EditText
            android:id="@+id/cadastrar_item_local_entrega"
            style="@style/AppTheme.input"
            android:layout_below="@id/cadastrar_item_local_retirada"
            android:hint="@string/local_entrega" />

        <EditText
            android:id="@+id/cadastrar_item_data_retirada"
            style="@style/AppTheme.input"
            android:inputType="date"
            android:layout_below="@id/cadastrar_item_local_entrega"
            android:hint="@string/data_retirada" />

        <EditText
            android:id="@+id/cadastrar_item_data_entrega"
            style="@style/AppTheme.input"
            android:inputType="date"
            android:layout_below="@id/cadastrar_item_data_retirada"
            android:hint="@string/data_entrega" />
    </RelativeLayout>
</ScrollView>
